--- a/crispy_extensions/templates/crispy_extensions/formset.html
+++ b/crispy_extensions/templates/crispy_extensions/formset.html
@@ -4,7 +4,7 @@
 <div class="emptyTemplate" style="display:none;">
 {% with formset.empty_form as form %}
     {% with form.helper as helper %}
-        {% uni_form form helper %}
+        {% crispy form helper %}
     {% endwith %}
 {% endwith %}
 </div>
